plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'jacoco'
}

group = 'flab'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	// aws s3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'com.h2database:h2'
	// test containers
	testImplementation 'org.testcontainers:testcontainers:1.20.2'
	testImplementation 'org.testcontainers:junit-jupiter:1.20.2'
	testImplementation 'org.testcontainers:mysql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	reports {
		html.required = true
		html.destination file("jacoco/report.html")
	}
//	finalizedBy 'jacocoTestCoverageVerification'
}

// jacoco 커버리지 검증 설정
//jacocoTestCoverageVerification {
//	violationRules {
//		rule {
//			enabled = true // 커버리지 적용 여부
//			element = 'CLASS' // 커버리지 적용 단위
//
//			// 라인 커버리지 설정
//			// 적용 대상 전체 소스 코드들을 한줄 한줄 따졌을 때 테스트 코드가 작성되어 있는 줄의 빈도
//			// 테스트 코드가 작성되어 있는 비율이 90% 이상이어야 함
//			limit {
//				counter = 'LINE'
//				value = 'COVEREDRATIO'
//				minimum = 0.80
//			}
//
//			// 브랜치 커버리지 설정
//			// if-else 등을 활용하여 발생되는 분기들 중 테스트 코드가 작성되어 있는 빈도
//			// 테스트 코드가 작성되어 있는 비율이 90% 이상이어야 함
//			limit {
//				counter = 'BRANCH'
//				value = 'COVEREDRATIO'
//				minimum = 0.80
//			}
//
//			// 라인 최대 갯수 설정
//			// 빈 줄을 제외하고 하나의 자바 파일에서 작성될 수 있는 최대 라인 갯수
//			// 한 파일에 최대 500줄까지 작성되어야 함
//			limit {
//				counter = 'LINE'
//				value = 'TOTALCOUNT'
//				maximum = 500
//			}
//		}
//	}
//}